--- a/public/index.html
+++ b/public/index.html
@@ -1,63 +1,128 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
+    <meta
+      name="google-site-verification"
+      content="x3Rjnn-e5Tt70Ccps82z3M4KugUDC1ecJI5Rj0R3bxo"
+    />
+    <title>팩트시트</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <meta name="google-site-verification" content="x3Rjnn-e5Tt70Ccps82z3M4KugUDC1ecJI5Rj0R3bxo" />
-  <title>팩트시트</title>
+    <!-- FIXME: keywords, author, description 확인해서 기입 필요 -->
+    <meta name="title" content="팩트시트" />
+    <meta name="author" content="팩트시트" />
+    <meta name="description" content="팩트시트로 확인하세요!" />
+    <meta name="keywords" content="팩트시트, 빠르고쉬운 검색, 정확한 검증" />
 
-  <!-- FIXME: keywords, author, description 확인해서 기입 필요 -->
-  <meta name="title" content="팩트시트" />
-  <meta name="author" content="팩트시트" />
-  <meta name="description" content="팩트시트로 확인하세요!" />
-  <meta name="keywords" content="팩트시트, 빠르고쉬운 검색, 정확한 검증" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <!-- FIXME: 도메인, description 확인되면 기입 필요 -->
+    <meta property="og:url" content="" />
+    <meta property="og:title" content="팩트시트" />
+    <meta property="og:description" content="팩트시트로 확인하세요!" />
+    <meta property="og:image" content="/favicon/opengraphy.png" />
+    <!-- END Open Graph -->
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website" />
-  <!-- FIXME: 도메인, description 확인되면 기입 필요 -->
-  <meta property="og:url" content="" />
-  <meta property="og:title" content="팩트시트" />
-  <meta property="og:description" content="팩트시트로 확인하세요!" />
-  <meta property="og:image" content="/favicon/opengraphy.png" />
-  <!-- END Open Graph -->
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- END fonts -->
 
-  <!-- fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap"
-    rel="stylesheet">
-  <!-- END fonts -->
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="/favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="/favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="/favicon/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- END favicon -->
+    <script src="https://ssl.daumcdn.net/dmaps/map_js_init/postcode.v2.js?autoload=false"></script>
 
-  <!-- favicon -->
-  <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/favicon/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-  <!-- END favicon -->
-  <script src="https://ssl.daumcdn.net/dmaps/map_js_init/postcode.v2.js?autoload=false"></script>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://testcpay.payple.kr/js/cpay.payple.1.0.1.js"></script> <!-- 테스트 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://testcpay.payple.kr/js/cpay.payple.1.0.1.js"></script>
+    <!-- 테스트 -->
     <!-- <script src="https://cpay.payple.kr/js/cpay.payple.1.0.1.js"></script> 운영 -->
-    
-</head>
+  </head>
 
-<body class="bg-body" ontouchstart>
-  <div id="app"></div>
-</body>
-
+  <body ontouchstart>
+    <div id="app"></div>
+  </body>
 </html>
